adjusted 'li' width from 33.3% to 33.31% to fix small gap on left side when in max-width:640 media queries

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -302,7 +302,7 @@ footer {
     }
 
     .portfolio, .contact, .about {
-        width:33.3%;
+        width:33.31%;
     }
 
     #name {
